--- a/src/components/ui/Dropdown.scss
+++ b/src/components/ui/Dropdown.scss
@@ -201,8 +201,8 @@
       visibility: hidden;
     }
     .dropdown-label {
-      height: 14px;
-      bottom: -2px;
+      height: 12px;
+      bottom: 0;
       font-size: 15px;
       color: $pink;
     }
